2000-10-04  Richard Braakman  <dark@wapit.com>

	* gw/wap-appl.c: Pass the status code we really got from the server
	to the client, instead of only accepting code 200 (HTTP_OK).
	Use 502 (Bad Gateway) if the actual lookup failed.
	Use http_get and http_post instead of http_get_real and http_post_real.
	Together with the header encoding patch earlier today, these changes
	allow HTTP redirection to work.

	* gw/wap-appl.c, gwlib/http.h: Use symbolic names for HTTP status
	codes.

	* gw/wsp_headers.c: Correct small bug that made wsp_headers_pack
	encode the content-type twice if separate_content_type was on.

2000-10-04  Richard Braakman  <dark@wapit.com>

	* gwlib/gwmem.h, gwlib/gwmem-check.c: Let gw_claim_area return
	the pointer it gets, and let it accept NULL pointers.  This
	makes it easier to use in wrapper macros.

	* gwlib/octstr.[ch]: Wrap octstr_create, octstr_create_from_data,
	octstr_copy, and octstr_duplicate so that they "claim" the Octstr
	they return for their caller.  This information will show up in
	the gw_check_leaks() output, making memory leaks much easier to
	trace.

	* gw/wsp_headers.c, gwlib/http.c: Fix memory leaks found this way.

2000-10-04  Richard Braakman  <dark@wapit.com>

	* Encode response headers and send them to the client:

	* gw/wsp_headers.[ch]: Added wsp_headers_pack.  Fixed some bugs in
	wsp_headers_unpack.  Replaced a few magic numbers with names.
	Reformatted.

	* checks/check_headers.sh, test/test_headers.c, test/header_test:
	New files.  Exercise header code by packing and unpacking a set
	of headers that try to cover all possibilities.

	* test/fakewap.c: Be less strict in checking Reply packet, because
	it can no longer assume the response headers are empty.  (Implementing
	full parsing wouldn't be worth the effort.)

	* gw/wap-appl.c: Added http_remove_hop_headers and used it to
	delete hop-by-hop headers when forwarding HTTP headers to
	client or server.  (The hop-by-hop headers are for one connection